# mono

./: .gitignore  CLAUDE.md  COMPARISON_SnippetManager_sPaperClip.md  MIGRATION_SUMMARY.md  README.md  REVIEWERS_GUIDE.md  SANDBOX_AGENT_PROMPT.md  init_proj_safari_suggested_websites.sh  init_proj_split_pdf.sh
PathOfErosion/: .gitignore  BUG_FINDINGS.md  BUG_REPORT.md  CLAUDE.md  Cargo.toml  GAME.md  MVP-CHECKPOINT.md  NEW_BUG_FINDINGS.md  build-web.sh  index.html  package-lock.json  package.json  proptest.toml  tsconfig.json
PathOfErosion/examples/: llm_session.md
PathOfErosion/proptest-regressions/: property_tests.txt
PathOfErosion/specs/: design.md  executive.md  (+1 more)
glibc-malloc-crash/: .gitignore  ALLOCATION_COUNT_BREAKTHROUGH.md  ALLOCATION_PATTERN_ANALYSIS.md  BETA_INVESTIGATION.md  CRASH_VALIDATION.md  Cargo.toml  DEEP_INVESTIGATION_FINDINGS.md  FINAL_REPORT.md  GEOJSON_VS_STD_COMPARISON.md  INVESTIGATION_BRANCHES.md  INVESTIGATION_LOG.md  INVESTIGATION_SUMMARY.md  MECHANISM_SUMMARY.md  MECHANISTIC_UNDERSTANDING.md  PATTERN_CHARACTERIZATION.md  PHASE1_OBSERVATIONS.md  PHASE2_HYPOTHESES.md  PHASE3_TEST_DESIGN.md  PHASE5_MECHANISM_INVESTIGATION.md  PHASE5_MINIMAL_THRESHOLDS.md  PHASE5_RESULTS.md  PRIOR_INVESTIGATIONS_SYNTHESIS.md  PROMPT_GEOJSON_VS_STD_ALLOCATION_PATTERNS.md  PROMPT_GEOJSON_VS_STD_REFINED.md  PROMPT_WEIRD_MALLOC_CRASH.md  README.md  START_HERE.md  TEST_RESULTS_SUMMARY.md  analyze_sizes.sh  boundary_test.txt  check_limits.sh  check_maps.sh  check_maps_arena2.sh  collect_env_fingerprint.sh  comparative_evidence.md  comprehensive_findings.md  crash_characteristics.txt  deeper_investigation_findings.md  environment_fingerprint.txt  geojson_histogram.txt  (+24 more)
safari_suggestions/: Cargo.toml  README.md
(+140 files in other folders)
