[package]
name = "tile_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "erosion"
path = "src/bin/erosion.rs"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
bincode = "1.3"
base64 = "0.21"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
proptest = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "KeyboardEvent",
    "MouseEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
] }
js-sys = "0.3"
